2010-01-29 22:16-EST Gregory John Casamento <greg.casamento@gmail.com>

	* WinNSMenu.m: Added implementation of updateAllWindowsWithMenu:.
	* WinUXTheme.m: Added implementation of activate to order out
	main menu window when this theme is switched to.

2010-01-26 Riccardo Mottola

	* added WinTheme.png: theme icon
	* added resources for Radio and Switch buttons

2010-01-24 04:44-EST Gregory John Casamento <greg.casamento@gmail.com>

	* WinUXThemeInfo.plist: Added myself to the list of authors.

2010-01-24 04:14-EST Gregory John Casamento <greg.casamento@gmail.com>

	* WinNSMenu.m: Reduce the scope of the lock to encompass only
	the lookup in processCommand:.

2010-01-24 04:06-EST Gregory John Casamento <greg.casamento@gmail.com>

	* WinNSMenu.m: Added locking mechanism to prevent concurrent update
	of menu from separate threads and to prevent processing of
	processCommand: messages until update of the menu is completed.

2010-01-24 03:09-EST Gregory John Casamento <greg.casamento@gmail.com>

	* WinNSMenu.m: Added function to delete the menu for the update
	delete_menu(...).

2010-01-23 18:37-EST Gregory John Casamento <greg.casamento@gmail.com>

	* WinNSMenu.m: Code to roughly calculate the number of rows
	a menu can take in the worst case.

2010-01-21 15:34-EST Gregory John Casamento <greg.casamento@gmail.com>

	* WinNSMenu.m: Add menu shortcut display and support for separators.
	* WinUXTheme.h: Remove uneeded ctxt variable.
	* WinUXTheme.m: Change color for window background to COLOR_3DFACE, 
	since this is what other projects have done.
	Please see this:
	http://www.winehq.org/pipermail/wine-patches/2005-September/020868.html

2010-01-15 13:07-EST Gregory John Casamento <greg.casamento@gmail.com>

	* WinNSMenu.m: Code to get the window bar height.  
	At this point the height is hard coded.

2010-01-14 16:09-EST Gregory John Casamento <greg.casamento@gmail.com>

	* WinNSMenu.m: Change to UTF8String so that there isn't any 