@@ -1,3 +1,10 @@
+2010-01-31 02:14-EST Gregory John Casamento <greg.casamento@gmail.com>
+
+	* GNUmakefile: Add new category for rendering menu items in
+	popups/pulldowns.
+	* WinNSMenuItemCell.m: New category for drawing popups/pulldowns
+	like buttons.  
+
 2010-01-29 22:16-EST Gregory John Casamento <greg.casamento@gmail.com>
 
 	* WinNSMenu.m: Added implementation of updateAllWindowsWithMenu:.
